welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:6: error: not found: value ma
	return ma
               ^